# paprika-mcp

./: .editorconfig  .gitattributes  .gitignore  LICENSE.md  README.md  package-lock.json  package.json  prompt.example.md  pyproject.toml  setup.sh
.github/workflows/: lint.yml
.husky/: pre-commit
src/paprika_mcp/: __init__.py  __main__.py  server.py  utils.py
src/paprika_mcp/prompts/: __init__.py  user_preferences.py
src/paprika_mcp/tools/: __init__.py  format_fraction.py  list_categories.py  read_recipe.py  search_recipes.py  update_recipe.py
