[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pip]
find-links = [
    "../paprika-recipes",
]

[[tool.hatch.envs.default.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[project]
name = "paprika-mcp"
version = "0.1.0"
description = "MCP server for Paprika recipe manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Brian Tkatch" }
]
dependencies = [
    "mcp>=1.0.0",
    "paprika-recipes @ git+https://github.com/briantkatch/paprika-recipes@2.5.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pyupgrade>=3.17.0",
]

[project.scripts]
paprika-mcp = "paprika_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paprika_mcp"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true
show_error_codes = true
show_error_context = true
